namespaces/atproto/pds.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atproto
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
apiVersion: v1
kind: Service
metadata:
  name: atproto-pds
  namespace: atproto
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: atproto-pds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atproto-pds
  namespace: atproto
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: atproto-pds
  template:
    metadata:
      labels:
        app: atproto-pds
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: atproto-pds
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          image: ghcr.io/bluesky-social/pds:0.4.182
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /pds
          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: http
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
        - name: pdsadmin
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          image: alpine:latest
          command: ["/bin/sh"]
          args:
            - -c
            - |
              tail -f /dev/null
          volumeMounts:
            - name: shared-scripts
              mountPath: /shared
            - name: data
              mountPath: /pds
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 16Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pds-storage-claim
        - name: shared-scripts
          emptyDir: {}
